# dagger-examples-rust

./: README.md
backend/: Cargo.toml
backend/src/: configuration.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
